# backend/src/routes/asset.ts
@@ -1,7 +1,7 @@
 import { Router } from "express";
 import { authByToken } from "../middleware/auth";
 
-const {createAsset, updateLocation, getAssets, getAsset, getAssetByTime} = require('../controllers/asset')
+const {createAsset, updateLocation, getAssets, getAsset, getAssetByTime, updateGeoFence} = require('../controllers/asset')
 
 const route = Router()
 
@@ -14,5 +14,7 @@ route.get('/asset/list', authByToken, getAssets)
 route.get('/asset/track/:_id', authByToken, getAsset)
 
 route.get('/asset/trackbytime/:_id', authByToken, getAssetByTime)
+
+route.put('/asset/geofence/:id', authByToken, updateGeoFence)
 
 export const assetRoute = route
